# alta_snowfall

./: README.md  pyproject.toml
data/: alta_snowfall_history.csv  slc_temperature_history.csv
notebooks/: data_vis_sandbox.ipynb
notebooks/.ipynb_checkpoints/: data_vis_sandbox-checkpoint.ipynb
scripts/: data_visualization.py
utils/: data.py  model.py  plot.py
