[tool.poetry]
name = "data-visualization-script"
version = "0.1.0"
description = ""
authors = ["Andre Hamm <andre@originrose.com>"]
readme = "README.md"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
